--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -1,29 +1,28 @@
-@article{Barrett:2017fcw,
-      author         = "Barrett, Jim W. and Gaebel, Sebastian M. and Neijssel,
-                        Coenraad J. and Vigna-Gomez, Alejandro and Stevenson,
-                        Simon and Berry, Christopher P. L. and Farr, Will M. and
-                        Mandel, Ilya",
-      title          = "{Accuracy of inference on the physics of binary evolution
-                        from gravitational-wave observations}",
-      journal        = "Mon. Not. Roy. Astron. Soc.",
-      volume         = "477",
-      year           = "2018",
-      number         = "4",
-      pages          = "4685-4695",
-      doi            = "10.1093/mnras/sty908",
-      eprint         = "1711.06287",
-      archivePrefix  = "arXiv",
-      primaryClass   = "astro-ph.HE",
-      SLACcitation   = "%%CITATION = ARXIV:1711.06287;%%"
+@article{Barrett2018,
+       author = "Barrett, Jim W. and Gaebel, Sebastian M. and Neijssel, Coenraad J. 
+                 and Vigna-Gomez, Alejandro and Stevenson, Simon and Berry, Christopher P. L.
+                 and Farr, Will M. and Mandel, Ilya",
+        title = "{Accuracy of inference on the physics of binary evolution from gravitational-wave observations}",
+      journal = "Mon. Not. Roy. Astron. Soc.",
+       volume = "477",
+         year = "2018",
+       number = "4",
+        pages = "4685-4695",
+          doi = "10.1093/mnras/sty908",
+       eprint = "1711.06287",
+archivePrefix = "arXiv",
+ primaryClass = "astro-ph.HE",
+ SLACcitation = "%%CITATION = ARXIV:1711.06287;%%"
 }
 
-@ARTICLE{Belczynski:2008,
-       author = {{Belczynski}, Krzysztof and {Kalogera}, Vassiliki and
-         {Rasio}, Frederic A. and {Taam}, Ronald E. and {Zezas}, Andreas and
-         {Bulik}, Tomasz and {Maccarone}, Thomas J. and {Ivanova}, Natalia},
+@article{Belczynski2008,
+       author = {{Belczynski}, Krzysztof and {Kalogera}, Vassiliki and {Rasio}, Frederic A.
+                and {Taam}, Ronald E. and {Zezas}, Andreas and {Bulik}, Tomasz and {Maccarone}, Thomas J.
+                and {Ivanova}, Natalia},
         title = "{Compact Object Modeling with the StarTrack Population Synthesis Code}",
       journal = {\apjs},
-     keywords = {binaries: close, black hole physics, stars: evolution, stars: neutron, white dwarfs, X-rays: binaries, Astrophysics},
+     keywords = {binaries: close, black hole physics, stars: evolution, stars: neutron, white dwarfs, X-rays: 
+                binaries, Astrophysics},
          year = "2008",
         month = "Jan",
        volume = {174},
@@ -37,14 +36,16 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@article{Broekgaarden:2019qnw,
-      author = {{Broekgaarden}, Floor S. and {Justham}, Stephen and {de Mink}, Selma E. and
-         {Gair}, Jonathan and {Mandel}, Ilya and {Stevenson}, Simon and
-         {Barrett}, Jim W. and {Vigna-G{\'o}mez}, Alejandro and
-         {Neijssel}, Coenraad J.},
-        title = "{STROOPWAFEL: simulating rare outcomes from astrophysical populations, with application to gravitational-wave sources}",
+@article{Broekgaarden2019,
+       author = {{Broekgaarden}, Floor S. and {Justham}, Stephen and {de Mink}, Selma E.
+                and {Gair}, Jonathan and {Mandel}, Ilya and {Stevenson}, Simon and {Barrett}, Jim W.
+                and {Vigna-G{\'o}mez}, Alejandro and {Neijssel}, Coenraad J.},
+        title = "{STROOPWAFEL: simulating rare outcomes from astrophysical populations, with application to 
+                gravitational-wave sources}",
       journal = {\mnras},
-     keywords = {gravitational waves, methods: statistical, software: development, binaries: general, stars: evolution, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Solar and Stellar Astrophysics, Physics - Data Analysis, Statistics and Probability},
+     keywords = {gravitational waves, methods: statistical, software: development, binaries: general, stars: evolution, 
+                 Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Instrumentation and Methods for Astrophysics, 
+                 Astrophysics - Solar and Stellar Astrophysics, Physics - Data Analysis, Statistics and Probability},
          year = "2019",
         month = "Dec",
        volume = {490},
@@ -58,11 +59,13 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{2020MNRAS.494.1587C,
-       author = {{Chattopadhyay}, Debatri and {Stevenson}, Simon and {Hurley}, Jarrod R. and {Rossi}, Luca J. and {Flynn}, Chris},
+@article{Chattopadhyay2020,
+       author = {{Chattopadhyay}, Debatri and {Stevenson}, Simon and {Hurley}, Jarrod R. and {Rossi}, Luca J.
+                and {Flynn}, Chris},
         title = "{Modelling double neutron stars: radio and gravitational waves}",
       journal = {\mnras},
-     keywords = {gravitational waves, stars: neutron, pulsars: general, Astrophysics - High Energy Astrophysical Phenomena, General Relativity and Quantum Cosmology},
+     keywords = {gravitational waves, stars: neutron, pulsars: general, Astrophysics - High Energy Astrophysical Phenomena,
+                General Relativity and Quantum Cosmology},
          year = 2020,
         month = may,
        volume = {494},
@@ -76,37 +79,36 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@article{claeys2014theoretical,
-  title={Theoretical uncertainties of the Type Ia supernova rate},
-  author={Claeys, JSW and Pols, OR and Izzard, RG and Vink, J and Verbunt, FWM},
-  journal={\aap},
-  volume={563},
-  pages={A83},
-  year={2014},
-  publisher={EDP Sciences}
+@article{Claeys2014,
+       author = {Claeys, JSW and Pols, OR and Izzard, RG and Vink, J and Verbunt, FWM},
+        title = {Theoretical uncertainties of the Type Ia supernova rate},
+      journal = {\aap},
+       volume = {563},
+        pages = {A83},
+         year = {2014},
+    publisher = {EDP Sciences}
 }
 
-@article{Dewi:2000nq,
-      author         = "Dewi, Jasinta D. M. and Tauris, Thomas M.",
-      title          = "{On the energy equation and efficiency parameter of the
-                        common envelope evolution}",
-      journal        = "Astron. Astrophys.",
-      volume         = "360",
-      year           = "2000",
-      pages          = "1043-1051",
-      eprint         = "astro-ph/0007034",
-      archivePrefix  = "arXiv",
-      primaryClass   = "astro-ph",
-      SLACcitation   = "%%CITATION = ASTRO-PH/0007034;%%"
+@article{Dewi2000,
+       author = "Dewi, Jasinta D. M. and Tauris, Thomas M.",
+        title = "{On the energy equation and efficiency parameter of the common envelope evolution}",
+      journal = "Astron. Astrophys.",
+       volume = "360",
+         year = "2000",
+        pages = "1043-1051",
+       eprint = "astro-ph/0007034",
+archivePrefix = "arXiv",
+ primaryClass = "astro-ph",
+ SLACcitation = "%%CITATION = ASTRO-PH/0007034;%%"
 }
 
-@ARTICLE{Fryer:2012ApJ,
-       author = {{Fryer}, Chris L. and {Belczynski}, Krzysztof and {Wiktorowicz},
-        Grzegorz and {Dominik}, Michal and {Kalogera}, Vicky and {Holz},
-        Daniel E.},
+@article{Fryer2012,
+       author = {{Fryer}, Chris L. and {Belczynski}, Krzysztof and {Wiktorowicz}, Grzegorz
+                and {Dominik}, Michal and {Kalogera}, Vicky and {Holz}, Daniel E.},
         title = "{Compact Remnant Mass Function: Dependence on the Explosion Mechanism and Metallicity}",
       journal = {\apj},
-     keywords = {black hole physics, stars: neutron, supernovae: general, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - High Energy Astrophysical Phenomena},
+     keywords = {black hole physics, stars: neutron, supernovae: general, Astrophysics - Solar and Stellar Astrophysics,
+                Astrophysics - High Energy Astrophysical Phenomena},
          year = 2012,
         month = Apr,
        volume = {749},
@@ -120,11 +122,12 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{Hurley:2000pk,
+@article{Hurley2000,
        author = {{Hurley}, Jarrod R. and {Pols}, Onno R. and {Tout}, Christopher A.},
         title = "{Comprehensive analytic formulae for stellar evolution as a function of mass and metallicity}",
       journal = {\mnras},
-     keywords = {METHODS: ANALYTICAL, STARS: EVOLUTION, STARS: FUNDAMENTAL PARAMETERS, STARS: MASS-LOSS, STARS: POPULATION II, GALAXIES: STELLAR CONTENT, Astrophysics},
+     keywords = {METHODS: ANALYTICAL, STARS: EVOLUTION, STARS: FUNDAMENTAL PARAMETERS, STARS: MASS-LOSS, STARS: 
+                POPULATION II, GALAXIES: STELLAR CONTENT, Astrophysics},
          year = "2000",
         month = "Jul",
        volume = {315},
@@ -138,37 +141,35 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@book{10.5555/7519,
-author = {Kernighan, B. W. and Ritchie, D. M.},
-title = {The C Programming Language},
-year = {1978},
-isbn = {0131101633},
-publisher = {Prentice-Hall, Inc.},
-address = {USA}
+@book{KernighanRitchie1978,
+       author = {Kernighan, B. W. and Ritchie, D. M.},
+        title = {The C Programming Language},
+         year = {1978},
+         isbn = {0131101633},
+    publisher = {Prentice-Hall, Inc.},
+      address = {USA}
 }
 
-@article{Kruckow:2016tti,
-      author         = "Kruckow, M. U. and Tauris, T. M. and Langer, N. and
-                        Szecsi, D. and Marchant, P. and Podsiadlowski, Ph.",
-      title          = "{Common envelope ejection in massive binary stars -
-                        Implications for the progenitors of GW150914 and
-                        GW151226}",
-      journal        = "Astron. Astrophys.",
-      volume         = "596",
-      year           = "2016",
-      pages          = "A58",
-      doi            = "10.1051/0004-6361/201629420",
-      eprint         = "1610.04417",
-      archivePrefix  = "arXiv",
-      primaryClass   = "astro-ph.SR",
-      SLACcitation   = "%%CITATION = ARXIV:1610.04417;%%"
+@article{Kruckow2016,
+       author = "Kruckow, M. U. and Tauris, T. M. and Langer, N. and Szecsi, D. and Marchant, P. and Podsiadlowski, Ph.",
+      title = "{Common envelope ejection in massive binary stars - Implications for the progenitors of GW150914 and GW151226}",
+      journal = "Astron. Astrophys.",
+       volume = "596",
+         year = "2016",
+        pages = "A58",
+          doi = "10.1051/0004-6361/201629420",
+       eprint = "1610.04417",
+archivePrefix = "arXiv",
+ primaryClass = "astro-ph.SR",
+ SLACcitation = "%%CITATION = ARXIV:1610.04417;%%"
 }
 
-@ARTICLE{Loveridge:2011ApJ,
+@article{Loveridge2011,
        author = {{Loveridge}, A.~J. and {van der Sluys}, M.~V. and {Kalogera}, V.},
         title = "{Analytical Expressions for the Envelope Binding Energy of Giants as a Function of Basic Stellar Parameters}",
       journal = {\apj},
-     keywords = {binaries: close, stars: evolution, stars: fundamental parameters, stars: mass-loss, Astrophysics - Solar and Stellar Astrophysics},
+     keywords = {binaries: close, stars: evolution, stars: fundamental parameters, stars: mass-loss, Astrophysics - Solar and 
+                Stellar Astrophysics},
          year = "2011",
         month = "Dec",
        volume = {743},
@@ -183,14 +184,12 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{2014A&A...564A.134M,
+@article{Mennekens2014,
        author = {{Mennekens}, N. and {Vanbeveren}, D.},
-        title = "{Massive double compact object mergers: gravitational wave sources and
-        r-process element production sites}",
+        title = "{Massive double compact object mergers: gravitational wave sources and r-process element production sites}",
       journal = {\aap},
-     keywords = {binaries: close, stars: massive, Galaxy: evolution, Astrophysics - Solar
-        and Stellar Astrophysics, Astrophysics - Astrophysics of
-        Galaxies},
+     keywords = {binaries: close, stars: massive, Galaxy: evolution, Astrophysics - Solar and Stellar Astrophysics, 
+                Astrophysics - Astrophysics of Galaxies},
          year = 2014,
         month = Apr,
        volume = {564},
@@ -203,14 +202,14 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{2019MNRAS.490.3740N,
-       author = {{Neijssel}, Coenraad J. and {Vigna-G{\'o}mez}, Alejandro and
-         {Stevenson}, Simon and {Barrett}, Jim W. and {Gaebel}, Sebastian M. and
-         {Broekgaarden}, Floor S. and {de Mink}, Selma E. and
-         {Sz{\'e}csi}, Dorottya and {Vinciguerra}, Serena and {Mandel}, Ilya},
+@article{Neijssel2019,
+       author = {{Neijssel}, Coenraad J. and {Vigna-G{\'o}mez}, Alejandro and {Stevenson}, Simon 
+                and {Barrett}, Jim W. and {Gaebel}, Sebastian M. and {Broekgaarden}, Floor S.
+                and {de Mink}, Selma E. and {Sz{\'e}csi}, Dorottya and {Vinciguerra}, Serena and {Mandel}, Ilya},
         title = "{The effect of the metallicity-specific star formation history on double compact object mergers}",
       journal = {\mnras},
-     keywords = {gravitational waves, (stars:) binaries: general, stars: massive, galaxies: star formation, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies},
+     keywords = {gravitational waves, (stars:) binaries: general, stars: massive, galaxies: star formation, 
+                Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies},
          year = "2019",
         month = "Dec",
        volume = {490},
@@ -224,21 +223,22 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@article{Riley:2020,
-    author = "Riley, Jeff and Mandel, Ilya and Marchant, Pablo and Butler, Ellen and Nathaniel, Kaila and Neijssel, Coenraad and Shortt, Spencer and Vigna-Gomez, Alejandro",
-    title = "{Chemically homogeneous evolution: a rapid population synthesis approach}",
-    eprint = "2010.00002",
-    archivePrefix = "arXiv",
-    primaryClass = "astro-ph.SR",
-    doi = "10.1093/mnras/stab1291",
-    journal = "Mon. Not. Roy. Astron. Soc.",
-    volume = "505",
-    number = "1",
-    pages = "663--676",
-    year = "2021"
+@article{Riley2021,
+       author = "Riley, Jeff and Mandel, Ilya and Marchant, Pablo and Butler, Ellen and Nathaniel, Kaila and 
+                Neijssel, Coenraad and Shortt, Spencer and Vigna-Gomez, Alejandro",
+        title = "{Chemically homogeneous evolution: a rapid population synthesis approach}",
+       eprint = "2010.00002",
+archivePrefix = "arXiv",
+ primaryClass = "astro-ph.SR",
+          doi = "10.1093/mnras/stab1291",
+      journal = "Mon. Not. Roy. Astron. Soc.",
+       volume = "505",
+       number = "1",
+        pages = "663--676",
+         year = "2021"
 }
 
-@ARTICLE{Soberman:1997mq,
+@article{Soberman:1997,
        author = {{Soberman}, G.~E. and {Phinney}, E.~S. and {van den Heuvel}, E.~P.~J.},
         title = "{Stability criteria for mass transfer in binary stellar evolution.}",
       journal = {\aap},
@@ -254,13 +254,13 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{Stevenson:2019rcw,
-       author = {{Stevenson}, Simon and {Sampson}, Matthew and {Powell}, Jade and
-         {Vigna-G{\'o}mez}, Alejandro and {Neijssel}, Coenraad J. and
-         {Sz{\'e}csi}, Dorottya and {Mandel}, Ilya},
+@article{Stevenson2019,
+       author = {{Stevenson}, Simon and {Sampson}, Matthew and {Powell}, Jade and {Vigna-G{\'o}mez}, Alejandro
+                and {Neijssel}, Coenraad J. and {Sz{\'e}csi}, Dorottya and {Mandel}, Ilya},
         title = "{The Impact of Pair-instability Mass Loss on the Binary Black Hole Mass Distribution}",
       journal = {\apj},
-     keywords = {Gravitational waves, Gravitational wave astronomy, Black holes, Supernovae, 678, 675, 162, 1668, Astrophysics - High Energy Astrophysical Phenomena, General Relativity and Quantum Cosmology},
+     keywords = {Gravitational waves, Gravitational wave astronomy, Black holes, Supernovae, 678, 675, 162, 1668, 
+                Astrophysics - High Energy Astrophysical Phenomena, General Relativity and Quantum Cosmology},
          year = 2019,
         month = sep,
        volume = {882},
@@ -275,10 +275,9 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{Stevenson2017FormationEvolution,
-       author = {{Stevenson}, Simon and {Vigna-G{\'o}mez}, Alejandro and {Mandel}, Ilya
-        and {Barrett}, Jim W. and {Neijssel}, Coenraad J. and {Perkins},
-        David and {de Mink}, Selma E.},
+@article{Stevenson2017,
+       author = {{Stevenson}, Simon and {Vigna-G{\'o}mez}, Alejandro and {Mandel}, Ilya and {Barrett}, Jim W.
+                and {Neijssel}, Coenraad J. and {Perkins}, David and {de Mink}, Selma E.},
         title = "{Formation of the first three gravitational-wave observations through isolated binary evolution}",
       journal = {Nature Communications},
      keywords = {Astrophysics - High Energy Astrophysical Phenomena, General Relativity and Quantum Cosmology},
@@ -295,15 +294,14 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{2018MNRAS.481.4009V,
-       author = {{Vigna-G{\'o}mez}, Alejandro and {Neijssel}, Coenraad J. and
-        {Stevenson}, Simon and {Barrett}, Jim W. and {Belczynski},
-        Krzysztof and {Justham}, Stephen and {de Mink}, Selma E. and
-        {M{\"u}ller}, Bernhard and {Podsiadlowski}, Philipp and {Renzo},
-        Mathieu and {Sz{\'e}csi}, Dorottya and {Mandel}, Ilya},
+@article{Vigna-Gomez2018,
+       author = {{Vigna-G{\'o}mez}, Alejandro and {Neijssel}, Coenraad J. and {Stevenson}, Simon and {Barrett}, Jim W. 
+                and {Belczynski}, Krzysztof and {Justham}, Stephen and {de Mink}, Selma E. and {M{\"u}ller}, Bernhard
+                and {Podsiadlowski}, Philipp and {Renzo},  Mathieu and {Sz{\'e}csi}, Dorottya and {Mandel}, Ilya},
         title = "{On the formation history of Galactic double neutron stars}",
       journal = {\mnras},
-     keywords = {binaries: general, stars: neutron, pulsars: general, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - High Energy Astrophysical Phenomena},
+     keywords = {binaries: general, stars: neutron, pulsars: general, Astrophysics - Solar and Stellar Astrophysics, 
+                Astrophysics - High Energy Astrophysical Phenomena},
          year = 2018,
         month = Dec,
        volume = {481},
@@ -316,23 +314,23 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@article{webbink1984double,
-  title={Double white dwarfs as progenitors of R Coronae Borealis stars and Type I supernovae},
-  author={Webbink, RF},
-  journal={The Astrophysical Journal},
-  volume={277},
-  pages={355--360},
-  year={1984}
+@article{Webbink1984,
+        title = {Double white dwarfs as progenitors of R Coronae Borealis stars and Type I supernovae},
+       author = {Webbink, RF},
+      journal = {The Astrophysical Journal},
+       volume = {277},
+        pages = {355--360},
+         year = {1984}
 }
 
-@article{xu2010binding,
-  title={On the binding energy parameter $\lambda$ of common envelope evolution},
-  author={Xu, Xiao-Jie and Li, Xiang-Dong},
-  journal={The Astrophysical Journal},
-  volume={716},
-  number={1},
-  pages={114},
-  year={2010},
-  publisher={IOP Publishing}
+@article{Xu2010,
+        title = {On the binding energy parameter $\lambda$ of common envelope evolution},
+       author = {Xu, Xiao-Jie and Li, Xiang-Dong},
+      journal = {The Astrophysical Journal},
+       volume = {716},
+       number = {1},
+        pages = {114},
+         year = {2010},
+    publisher = {IOP Publishing}
 }
 
