Fixing more refs - still more to do

--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -1,5 +1,5 @@
 @article{Barrett2018,
-       author = "Barrett, Jim W. and Gaebel, Sebastian M. and Neijssel, Coenraad J. 
+       author = "{Barrett}, Jim W. and {Gaebel}, Sebastian M. and {Neijssel}, Coenraad J. 
                  and Vigna-Gomez, Alejandro and Stevenson, Simon and Berry, Christopher P. L.
                  and Farr, Will M. and Mandel, Ilya",
         title = "{Accuracy of inference on the physics of binary evolution from gravitational-wave observations}",
@@ -80,7 +80,7 @@ archivePrefix = {arXiv},
 }
 
 @article{Claeys2014,
-       author = {Claeys, JSW and Pols, OR and Izzard, RG and Vink, J and Verbunt, FWM},
+       author = {{Claeys}, JSW and {Pols}, OR and {Izzard}, RG and Vink, J and Verbunt, FWM},
         title = {Theoretical uncertainties of the Type Ia supernova rate},
       journal = {\aap},
        volume = {563},
@@ -90,7 +90,7 @@ archivePrefix = {arXiv},
 }
 
 @article{Dewi2000,
-       author = "Dewi, Jasinta D. M. and Tauris, Thomas M.",
+       author = "{Dewi}, Jasinta D. M. and {Tauris}, Thomas M.",
         title = "{On the energy equation and efficiency parameter of the common envelope evolution}",
       journal = "Astron. Astrophys.",
        volume = "360",
@@ -142,7 +142,7 @@ archivePrefix = {arXiv},
 }
 
 @book{KernighanRitchie1978,
-       author = {Kernighan, B. W. and Ritchie, D. M.},
+       author = {{Kernighan}, B. W. and {Ritchie}, D. M.},
         title = {The C Programming Language},
          year = {1978},
          isbn = {0131101633},
@@ -151,8 +151,8 @@ archivePrefix = {arXiv},
 }
 
 @article{Kruckow2016,
-       author = "Kruckow, M. U. and Tauris, T. M. and Langer, N. and Szecsi, D. and Marchant, P. and Podsiadlowski, Ph.",
-      title = "{Common envelope ejection in massive binary stars - Implications for the progenitors of GW150914 and GW151226}",
+       author = "{Kruckow}, M. U. and {Tauris}, T. M. and {Langer}, N. and Szecsi, D. and Marchant, P. and Podsiadlowski, Ph.",
+        title = "{Common envelope ejection in massive binary stars - Implications for the progenitors of GW150914 and GW151226}",
       journal = "Astron. Astrophys.",
        volume = "596",
          year = "2016",
@@ -224,7 +224,7 @@ archivePrefix = {arXiv},
 }
 
 @article{Riley2021,
-       author = "Riley, Jeff and Mandel, Ilya and Marchant, Pablo and Butler, Ellen and Nathaniel, Kaila and 
+       author = "{Riley}, Jeff and {Mandel}, Ilya and {Marchant}, Pablo and Butler, Ellen and Nathaniel, Kaila and 
                 Neijssel, Coenraad and Shortt, Spencer and Vigna-Gomez, Alejandro",
         title = "{Chemically homogeneous evolution: a rapid population synthesis approach}",
        eprint = "2010.00002",
@@ -315,8 +315,8 @@ archivePrefix = {arXiv},
 }
 
 @article{Webbink1984,
-        title = {Double white dwarfs as progenitors of R Coronae Borealis stars and Type I supernovae},
        author = {Webbink, RF},
+        title = {Double white dwarfs as progenitors of R Coronae Borealis stars and Type I supernovae},
       journal = {The Astrophysical Journal},
        volume = {277},
         pages = {355--360},
@@ -324,8 +324,8 @@ archivePrefix = {arXiv},
 }
 
 @article{Xu2010,
+       author = {{Xu}, Xiao-Jie and {Li}, Xiang-Dong},
         title = {On the binding energy parameter $\lambda$ of common envelope evolution},
-       author = {Xu, Xiao-Jie and Li, Xiang-Dong},
       journal = {The Astrophysical Journal},
        volume = {716},
        number = {1},
