--- a/docs/notebooks/H5/2_readingH5.ipynb
+++ b/docs/notebooks/H5/2_readingH5.ipynb
@@ -29,8 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "pathToH5 = os.getcwd() + '/../COMPAS_Output.h5' # Set this to the appropriate path for you"
+    "pathToH5 = '../COMPAS_Output.h5' # Set this to the appropriate path for you"
    ]
   },
   {
@@ -170,7 +169,7 @@
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python3"
+   "name": "python"
   },
   "language_info": {
    "codemirror_mode": {
@@ -181,7 +180,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
+   "pygments_lexer": "ipython",
    "version": "3.9.5"
   }
  },
