--- a/docs/notebooks/cosmicIntegration/3_SelectionEffects.ipynb
+++ b/docs/notebooks/cosmicIntegration/3_SelectionEffects.ipynb
@@ -131,7 +131,7 @@
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python3"
+   "name": "python"
   },
   "language_info": {
    "codemirror_mode": {
@@ -142,7 +142,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
+   "pygments_lexer": "ipython",
    "version": "3.9.5"
   }
  },
