--- a/docs/notebooks/cosmicIntegration/6_FastCosmicIntegrator.ipynb
+++ b/docs/notebooks/cosmicIntegration/6_FastCosmicIntegrator.ipynb
@@ -107,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "python /postProcessing/Folders/CosmicIntegration/PythonScripts/FastCosmicIntegration.py --help\n",
+    "python3 /postProcessing/Folders/CosmicIntegration/PythonScripts/FastCosmicIntegration.py --help\n",
     "usage: FastCosmicIntegration.py [-h] [--path PATH] [--filename FNAME] [--dco_type DCO_TYPE] [--weight WEIGHT_COLUMN]\n",
     "                                [--maxz MAX_REDSHIFT] [--zSF Z_FIRST_SF] [--maxzdet MAX_REDSHIFT_DETECTION]\n",
     "                                [--zstep REDSHIFT_STEP] [--sens SENSITIVITY] [--snr SNR_THRESHOLD] [--m1min M1_MIN]\n",
@@ -883,7 +883,7 @@
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -894,7 +894,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython",
+   "pygments_lexer": "ipython3",
    "version": "3.9.5"
   }
  },
