--- a/docs/notebooks/H5/3_rewritingH5.ipynb
+++ b/docs/notebooks/H5/3_rewritingH5.ipynb
@@ -236,7 +236,7 @@
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
-   "name": "python"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -247,7 +247,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython",
+   "pygments_lexer": "ipython3",
    "version": "3.6.5"
   }
  },
