--- a/docs/notebooks/cosmicIntegration/1_ClassCOMPAS.ipynb
+++ b/docs/notebooks/cosmicIntegration/1_ClassCOMPAS.ipynb
@@ -447,7 +447,7 @@
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -458,7 +458,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython",
+   "pygments_lexer": "ipython3",
    "version": "3.9.5"
   }
  },
