--- a/docs/notebooks/cosmicIntegration/2_MSSFR-or-SFRD-prescriptions.ipynb
+++ b/docs/notebooks/cosmicIntegration/2_MSSFR-or-SFRD-prescriptions.ipynb
@@ -1153,7 +1153,7 @@
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1164,7 +1164,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython",
+   "pygments_lexer": "ipython3",
    "version": "3.9.5"
   }
  },
