--- a/docs/notebooks/cosmicIntegration/5_MergersAsFunctionOfRedhisft.ipynb
+++ b/docs/notebooks/cosmicIntegration/5_MergersAsFunctionOfRedhisft.ipynb
@@ -639,7 +639,7 @@
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -650,7 +650,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython",
+   "pygments_lexer": "ipython3",
    "version": "3.9.5"
   }
  },
