--- a/docs/notebooks/pythonBasics/1_slicingData.ipynb
+++ b/docs/notebooks/pythonBasics/1_slicingData.ipynb
@@ -541,7 +541,7 @@
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
-   "name": "python"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -552,7 +552,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython",
+   "pygments_lexer": "ipython3",
    "version": "3.6.5"
   }
  },
