--- a/docs/notebooks/pythonBasics/2_visualisingData.ipynb
+++ b/docs/notebooks/pythonBasics/2_visualisingData.ipynb
@@ -277,7 +277,7 @@
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
-   "name": "python"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -288,7 +288,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython",
+   "pygments_lexer": "ipython3",
    "version": "3.6.5"
   }
  },
