Added reference for COMPAS methods paper

--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -1,8 +1,17 @@
+@misc{compas2021,
+        title = {Rapid stellar and binary population synthesis with COMPAS}, 
+      author  = {Team COMPAS and : and Jeff Riley and Poojan Agrawal and Jim W. Barrett and Kristan N. K. Boyett and Floor S. Broekgaarden and Debatri Chattopadhyay and Sebastian M. Gaebel and Fabian Gittins and Ryosuke Hirai and George Howitt and Stephen Justham and Lokesh Khandelwal and Floris Kummer and Mike Y. M. Lau and Ilya Mandel and Selma E. de Mink and Coenraad Neijssel and Tim Riley and Lieke van Son and Simon Stevenson and Alejandro Vigna-Gomez and Serena Vinciguerra and Tom Wagg and Reinhold Willcox},
+         year = {2021},
+       eprint = {2109.10352},
+archivePrefix = {arXiv},
+ primaryClass = {astro-ph.IM}
+}
+
 @article{Barrett2018,
+        title = "{Accuracy of inference on the physics of binary evolution from gravitational-wave observations}",
        author = "{Barrett}, Jim W. and {Gaebel}, Sebastian M. and {Neijssel}, Coenraad J. 
                  and Vigna-Gomez, Alejandro and Stevenson, Simon and Berry, Christopher P. L.
                  and Farr, Will M. and Mandel, Ilya",
-        title = "{Accuracy of inference on the physics of binary evolution from gravitational-wave observations}",
       journal = "Mon. Not. Roy. Astron. Soc.",
        volume = "477",
          year = "2018",
@@ -16,10 +25,10 @@ archivePrefix = "arXiv",
 }
 
 @article{Belczynski2008,
+        title = "{Compact Object Modeling with the StarTrack Population Synthesis Code}",
        author = {{Belczynski}, Krzysztof and {Kalogera}, Vassiliki and {Rasio}, Frederic A.
                 and {Taam}, Ronald E. and {Zezas}, Andreas and {Bulik}, Tomasz and {Maccarone}, Thomas J.
                 and {Ivanova}, Natalia},
-        title = "{Compact Object Modeling with the StarTrack Population Synthesis Code}",
       journal = {\apjs},
      keywords = {binaries: close, black hole physics, stars: evolution, stars: neutron, white dwarfs, X-rays: 
                 binaries, Astrophysics},
@@ -37,11 +46,11 @@ archivePrefix = {arXiv},
 }
 
 @article{Broekgaarden2019,
+        title = "{STROOPWAFEL: simulating rare outcomes from astrophysical populations, with application to 
+                gravitational-wave sources}",
        author = {{Broekgaarden}, Floor S. and {Justham}, Stephen and {de Mink}, Selma E.
                 and {Gair}, Jonathan and {Mandel}, Ilya and {Stevenson}, Simon and {Barrett}, Jim W.
                 and {Vigna-G{\'o}mez}, Alejandro and {Neijssel}, Coenraad J.},
-        title = "{STROOPWAFEL: simulating rare outcomes from astrophysical populations, with application to 
-                gravitational-wave sources}",
       journal = {\mnras},
      keywords = {gravitational waves, methods: statistical, software: development, binaries: general, stars: evolution, 
                  Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Instrumentation and Methods for Astrophysics, 
@@ -60,9 +69,9 @@ archivePrefix = {arXiv},
 }
 
 @article{Chattopadhyay2020,
+        title = "{Modelling double neutron stars: radio and gravitational waves}",
        author = {{Chattopadhyay}, Debatri and {Stevenson}, Simon and {Hurley}, Jarrod R. and {Rossi}, Luca J.
                 and {Flynn}, Chris},
-        title = "{Modelling double neutron stars: radio and gravitational waves}",
       journal = {\mnras},
      keywords = {gravitational waves, stars: neutron, pulsars: general, Astrophysics - High Energy Astrophysical Phenomena,
                 General Relativity and Quantum Cosmology},
@@ -80,8 +89,8 @@ archivePrefix = {arXiv},
 }
 
 @article{Claeys2014,
-       author = {{Claeys}, JSW and {Pols}, OR and {Izzard}, RG and Vink, J and Verbunt, FWM},
         title = {Theoretical uncertainties of the Type Ia supernova rate},
+       author = {{Claeys}, JSW and {Pols}, OR and {Izzard}, RG and Vink, J and Verbunt, FWM},
       journal = {\aap},
        volume = {563},
         pages = {A83},
@@ -90,8 +99,8 @@ archivePrefix = {arXiv},
 }
 
 @article{Dewi2000,
-       author = "{Dewi}, Jasinta D. M. and {Tauris}, Thomas M.",
         title = "{On the energy equation and efficiency parameter of the common envelope evolution}",
+       author = "{Dewi}, Jasinta D. M. and {Tauris}, Thomas M.",
       journal = "Astron. Astrophys.",
        volume = "360",
          year = "2000",
@@ -103,9 +112,9 @@ archivePrefix = "arXiv",
 }
 
 @article{Fryer2012,
+        title = "{Compact Remnant Mass Function: Dependence on the Explosion Mechanism and Metallicity}",
        author = {{Fryer}, Chris L. and {Belczynski}, Krzysztof and {Wiktorowicz}, Grzegorz
                 and {Dominik}, Michal and {Kalogera}, Vicky and {Holz}, Daniel E.},
-        title = "{Compact Remnant Mass Function: Dependence on the Explosion Mechanism and Metallicity}",
       journal = {\apj},
      keywords = {black hole physics, stars: neutron, supernovae: general, Astrophysics - Solar and Stellar Astrophysics,
                 Astrophysics - High Energy Astrophysical Phenomena},
@@ -123,8 +132,8 @@ archivePrefix = {arXiv},
 }
 
 @article{Hurley2000,
-       author = {{Hurley}, Jarrod R. and {Pols}, Onno R. and {Tout}, Christopher A.},
         title = "{Comprehensive analytic formulae for stellar evolution as a function of mass and metallicity}",
+       author = {{Hurley}, Jarrod R. and {Pols}, Onno R. and {Tout}, Christopher A.},
       journal = {\mnras},
      keywords = {METHODS: ANALYTICAL, STARS: EVOLUTION, STARS: FUNDAMENTAL PARAMETERS, STARS: MASS-LOSS, STARS: 
                 POPULATION II, GALAXIES: STELLAR CONTENT, Astrophysics},
@@ -142,8 +151,8 @@ archivePrefix = {arXiv},
 }
 
 @book{KernighanRitchie1978,
-       author = {{Kernighan}, B. W. and {Ritchie}, D. M.},
         title = {The C Programming Language},
+       author = {{Kernighan}, B. W. and {Ritchie}, D. M.},
          year = {1978},
          isbn = {0131101633},
     publisher = {Prentice-Hall, Inc.},
@@ -151,8 +160,8 @@ archivePrefix = {arXiv},
 }
 
 @article{Kruckow2016,
-       author = "{Kruckow}, M. U. and {Tauris}, T. M. and {Langer}, N. and Szecsi, D. and Marchant, P. and Podsiadlowski, Ph.",
         title = "{Common envelope ejection in massive binary stars - Implications for the progenitors of GW150914 and GW151226}",
+       author = "{Kruckow}, M. U. and {Tauris}, T. M. and {Langer}, N. and Szecsi, D. and Marchant, P. and Podsiadlowski, Ph.",
       journal = "Astron. Astrophys.",
        volume = "596",
          year = "2016",
@@ -165,8 +174,8 @@ archivePrefix = "arXiv",
 }
 
 @article{Loveridge2011,
-       author = {{Loveridge}, A.~J. and {van der Sluys}, M.~V. and {Kalogera}, V.},
         title = "{Analytical Expressions for the Envelope Binding Energy of Giants as a Function of Basic Stellar Parameters}",
+       author = {{Loveridge}, A.~J. and {van der Sluys}, M.~V. and {Kalogera}, V.},
       journal = {\apj},
      keywords = {binaries: close, stars: evolution, stars: fundamental parameters, stars: mass-loss, Astrophysics - Solar and 
                 Stellar Astrophysics},
@@ -185,8 +194,8 @@ archivePrefix = {arXiv},
 }
 
 @article{Mennekens2014,
-       author = {{Mennekens}, N. and {Vanbeveren}, D.},
         title = "{Massive double compact object mergers: gravitational wave sources and r-process element production sites}",
+       author = {{Mennekens}, N. and {Vanbeveren}, D.},
       journal = {\aap},
      keywords = {binaries: close, stars: massive, Galaxy: evolution, Astrophysics - Solar and Stellar Astrophysics, 
                 Astrophysics - Astrophysics of Galaxies},
@@ -203,10 +212,10 @@ archivePrefix = {arXiv},
 }
 
 @article{Neijssel2019,
+        title = "{The effect of the metallicity-specific star formation history on double compact object mergers}",
        author = {{Neijssel}, Coenraad J. and {Vigna-G{\'o}mez}, Alejandro and {Stevenson}, Simon 
                 and {Barrett}, Jim W. and {Gaebel}, Sebastian M. and {Broekgaarden}, Floor S.
                 and {de Mink}, Selma E. and {Sz{\'e}csi}, Dorottya and {Vinciguerra}, Serena and {Mandel}, Ilya},
-        title = "{The effect of the metallicity-specific star formation history on double compact object mergers}",
       journal = {\mnras},
      keywords = {gravitational waves, (stars:) binaries: general, stars: massive, galaxies: star formation, 
                 Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies},
@@ -224,9 +233,9 @@ archivePrefix = {arXiv},
 }
 
 @article{Riley2021,
+        title = "{Chemically homogeneous evolution: a rapid population synthesis approach}",
        author = "{Riley}, Jeff and {Mandel}, Ilya and {Marchant}, Pablo and Butler, Ellen and Nathaniel, Kaila and 
                 Neijssel, Coenraad and Shortt, Spencer and Vigna-Gomez, Alejandro",
-        title = "{Chemically homogeneous evolution: a rapid population synthesis approach}",
        eprint = "2010.00002",
 archivePrefix = "arXiv",
  primaryClass = "astro-ph.SR",
@@ -238,9 +247,9 @@ archivePrefix = "arXiv",
          year = "2021"
 }
 
-@article{Soberman:1997,
-       author = {{Soberman}, G.~E. and {Phinney}, E.~S. and {van den Heuvel}, E.~P.~J.},
+@article{Soberman1997,
         title = "{Stability criteria for mass transfer in binary stellar evolution.}",
+       author = {{Soberman}, G.~E. and {Phinney}, E.~S. and {van den Heuvel}, E.~P.~J.},
       journal = {\aap},
      keywords = {CLOSE BINARIES, TIDAL INTERACTION, MASS TRANSFER, Astrophysics},
          year = 1997,
@@ -255,9 +264,9 @@ archivePrefix = {arXiv},
 }
 
 @article{Stevenson2019,
+        title = "{The Impact of Pair-instability Mass Loss on the Binary Black Hole Mass Distribution}",
        author = {{Stevenson}, Simon and {Sampson}, Matthew and {Powell}, Jade and {Vigna-G{\'o}mez}, Alejandro
                 and {Neijssel}, Coenraad J. and {Sz{\'e}csi}, Dorottya and {Mandel}, Ilya},
-        title = "{The Impact of Pair-instability Mass Loss on the Binary Black Hole Mass Distribution}",
       journal = {\apj},
      keywords = {Gravitational waves, Gravitational wave astronomy, Black holes, Supernovae, 678, 675, 162, 1668, 
                 Astrophysics - High Energy Astrophysical Phenomena, General Relativity and Quantum Cosmology},
@@ -276,9 +285,9 @@ archivePrefix = {arXiv},
 }
 
 @article{Stevenson2017,
+        title = "{Formation of the first three gravitational-wave observations through isolated binary evolution}",
        author = {{Stevenson}, Simon and {Vigna-G{\'o}mez}, Alejandro and {Mandel}, Ilya and {Barrett}, Jim W.
                 and {Neijssel}, Coenraad J. and {Perkins}, David and {de Mink}, Selma E.},
-        title = "{Formation of the first three gravitational-wave observations through isolated binary evolution}",
       journal = {Nature Communications},
      keywords = {Astrophysics - High Energy Astrophysical Phenomena, General Relativity and Quantum Cosmology},
          year = 2017,
@@ -295,10 +304,10 @@ archivePrefix = {arXiv},
 }
 
 @article{Vigna-Gomez2018,
+        title = "{On the formation history of Galactic double neutron stars}",
        author = {{Vigna-G{\'o}mez}, Alejandro and {Neijssel}, Coenraad J. and {Stevenson}, Simon and {Barrett}, Jim W. 
                 and {Belczynski}, Krzysztof and {Justham}, Stephen and {de Mink}, Selma E. and {M{\"u}ller}, Bernhard
                 and {Podsiadlowski}, Philipp and {Renzo},  Mathieu and {Sz{\'e}csi}, Dorottya and {Mandel}, Ilya},
-        title = "{On the formation history of Galactic double neutron stars}",
       journal = {\mnras},
      keywords = {binaries: general, stars: neutron, pulsars: general, Astrophysics - Solar and Stellar Astrophysics, 
                 Astrophysics - High Energy Astrophysical Phenomena},
@@ -315,8 +324,8 @@ archivePrefix = {arXiv},
 }
 
 @article{Webbink1984,
-       author = {Webbink, RF},
         title = {Double white dwarfs as progenitors of R Coronae Borealis stars and Type I supernovae},
+       author = {Webbink, RF},
       journal = {The Astrophysical Journal},
        volume = {277},
         pages = {355--360},
@@ -324,8 +333,8 @@ archivePrefix = {arXiv},
 }
 
 @article{Xu2010,
-       author = {{Xu}, Xiao-Jie and {Li}, Xiang-Dong},
         title = {On the binding energy parameter $\lambda$ of common envelope evolution},
+       author = {{Xu}, Xiao-Jie and {Li}, Xiang-Dong},
       journal = {The Astrophysical Journal},
        volume = {716},
        number = {1},
