Reformatted reference for COMPAS methods paper

--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -1,7 +1,6 @@
 @misc{compas2021,
         title = {Rapid stellar and binary population synthesis with COMPAS}, 
-   all_author = {Team COMPAS and : and Jeff Riley and Poojan Agrawal and Jim W. Barrett and Kristan N. K. Boyett and Floor S. Broekgaarden and Debatri Chattopadhyay and Sebastian M. Gaebel and Fabian Gittins and Ryosuke Hirai and George Howitt and Stephen Justham and Lokesh Khandelwal and Floris Kummer and Mike Y. M. Lau and Ilya Mandel and Selma E. de Mink and Coenraad Neijssel and Tim Riley and Lieke van Son and Simon Stevenson and Alejandro Vigna-Gomez and Serena Vinciguerra and Tom Wagg and Reinhold Willcox},
-       author = {{Team COMPAS: J. Riley et al.}},
+       author = {{Team COMPAS} and Jeff {Riley} and Poojan Agrawal and Jim W. Barrett and Kristan N. K. Boyett and Floor S. Broekgaarden and Debatri Chattopadhyay and Sebastian M. Gaebel and Fabian Gittins and Ryosuke Hirai and George Howitt and Stephen Justham and Lokesh Khandelwal and Floris Kummer and Mike Y. M. Lau and Ilya Mandel and Selma E. de Mink and Coenraad Neijssel and Tim Riley and Lieke van Son and Simon Stevenson and Alejandro Vigna-Gomez and Serena Vinciguerra and Tom Wagg and Reinhold Willcox},
          year = {2021},
        eprint = {2109.10352},
 archivePrefix = {arXiv},
@@ -325,8 +324,8 @@ archivePrefix = {arXiv},
 }
 
 @article{Webbink1984,
-        title = {Double white dwarfs as progenitors of R Coronae Borealis stars and Type I supernovae},
-       author = {Webbink, RF},
+        title = {{Double white dwarfs as progenitors of R Coronae Borealis stars and Type I supernovae}},
+       author = {{Webbink}, RF},
       journal = {The Astrophysical Journal},
        volume = {277},
         pages = {355--360},
