Removed some requests for citation on 'cite COMPAS' page

--- a/docs/refs.bib
+++ b/docs/refs.bib
@@ -1,6 +1,10 @@
 @misc{compas2021,
         title = {Rapid stellar and binary population synthesis with COMPAS}, 
-       author = {{Team COMPAS} and Jeff {Riley} and Poojan Agrawal and Jim W. Barrett and Kristan N. K. Boyett and Floor S. Broekgaarden and Debatri Chattopadhyay and Sebastian M. Gaebel and Fabian Gittins and Ryosuke Hirai and George Howitt and Stephen Justham and Lokesh Khandelwal and Floris Kummer and Mike Y. M. Lau and Ilya Mandel and Selma E. de Mink and Coenraad Neijssel and Tim Riley and Lieke van Son and Simon Stevenson and Alejandro Vigna-Gomez and Serena Vinciguerra and Tom Wagg and Reinhold Willcox},
+       author = {{Team COMPAS} and Jeff {Riley} and Poojan Agrawal and Jim W. Barrett and Kristan N. K. Boyett and 
+                Floor S. Broekgaarden and Debatri Chattopadhyay and Sebastian M. Gaebel and Fabian Gittins and Ryosuke Hirai and
+                George Howitt and Stephen Justham and Lokesh Khandelwal and Floris Kummer and Mike Y. M. Lau and Ilya Mandel and 
+                Selma E. de Mink and Coenraad Neijssel and Tim Riley and Lieke van Son and Simon Stevenson and Alejandro Vigna-Gomez and 
+                Serena Vinciguerra and Tom Wagg and Reinhold Willcox},
          year = {2021},
        eprint = {2109.10352},
 archivePrefix = {arXiv},
